fixed loading text not centered

--- a/public/css/lumen-demo-tool-style.css
+++ b/public/css/lumen-demo-tool-style.css
@@ -1,3 +1,6 @@
 .lumen-album-head {
     margin-bottom:20px;
 }
+#lumenDemoToolTable_wrapper {
+    position: relative;
+}
